--- a/style.css
+++ b/style.css
@@ -1,103 +1,107 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    color: white;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  color: white;
 }
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
+}
+
+.video-container {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 video {
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    object-fit: cover;
-    z-index: -1;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
 
 nav {
-    margin-top: 20px;
-    width: 100%;
-    top: 0;
-    background-color: transparent;
+  margin-top: 20px;
+  width: 100%;
+  top: 0;
+  background-color: transparent;
 }
 
 #logo {
-    margin-right: 200px;
-    font-size: 2rem;
-    font-family: 'Carter One', cursive;
+  margin-right: 200px;
+  font-size: 2rem;
+  font-family: "Carter One", cursive;
 }
 
-
 .main-content {
-    position: absolute;
-    top: 37%;
+  position: absolute;
+  top: 37%;
 }
 
 .main-title {
-    font-size: 48px;
-    font-weight: 700;
+  font-size: 48px;
+  font-weight: 700;
 }
 
 .button-apoie {
-    padding: 1px 30px;
-    border: 1px solid white;
-    transition: .5s;
+  padding: 1px 30px;
+  border: 1px solid white;
+  transition: 0.5s;
 }
 
 .button-apoie:hover {
-    background-color: #132010;
-    ;
+  background-color: #132010;
 }
 
 .apoie {
-    cursor: pointer;
-    margin-top: 40px;
-    outline: none;
-    border: none;
-    font-weight: 400;
-    padding: 8px 130px;
-    background-color: #132010;
-    transition: .5s ease;
+  cursor: pointer;
+  margin-top: 40px;
+  outline: none;
+  border: none;
+  font-weight: 400;
+  padding: 8px 130px;
+  background-color: #132010;
+  transition: 0.5s ease;
 }
 
 .apoie:hover {
-    background-color: #759a68a0;
-    transform: scale(1.1);
+  background-color: #759a68a0;
+  transform: scale(1.1);
 }
 
-
 .nav-item::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -2px;
-    width: 72%;
-    height: 1px;
-    background-color: #ffffff;
-    transition: .8s;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 72%;
+  height: 1px;
+  background-color: #ffffff;
+  transition: 0.8s;
 }
 
 .change {
-    transition: .7s;
+  transition: 0.7s;
 }
 
 .change:hover {
-    color: #132010;
+  color: #132010;
 }
-
 
 /*media queries*/
 
-@media(max-width: 1300px){
-    .main-title {
-        font-size: 35px;
-        font-weight: 700;
-    }
+@media (max-width: 1300px) {
+  .main-title {
+    font-size: 35px;
+    font-weight: 700;
+  }
 
-.nav-item::after {
+  .nav-item::after {
     content: "";
     position: absolute;
     left: 0;
@@ -105,18 +109,17 @@ nav {
     width: 100%;
     height: 1px;
     background-color: #ffffff;
-    transition: .8s;
+    transition: 0.8s;
+  }
 }
-}
 
+@media (max-width: 400px) {
+  .main-title {
+    font-size: 23px;
+    font-weight: 700;
+  }
 
-@media(max-width: 400px){
-    .main-title {
-        font-size: 23px;
-        font-weight: 700;
-    }
-
-.nav-item::after {
+  .nav-item::after {
     content: "";
     position: absolute;
     left: 0;
@@ -124,13 +127,12 @@ nav {
     width: 100%;
     height: 1px;
     background-color: #ffffff;
-    transition: .8s;
-}
+    transition: 0.8s;
+  }
 
-.main-content {
+  .main-content {
     position: absolute;
     top: 27%;
-}
+  }
 }
 /* // media queries*/
-
